--- a/src/mfakto.ini
+++ b/src/mfakto.ini
@@ -284,7 +284,8 @@ ProgressFormat=%d %T | %C %p%% | %t  %e |   %g  %s  %W%%
 #                   devices
 # GPUType=GCN2      2nd generation GCN architecture
 # GPUType=GCN3      3rd generation GCN architecture
-# GPUType=GCN4      Polaris GPUs, such as the Radeon RX 460
+# GPUType=GCN4      Earlier Polaris GPUs, such as the Radeon RX 460
+# GPUType=GCN4X     More recent Polaris GPUs, such as the Radeon Pro 560X
 # GPUType=GCN5      14 nm Vega GPUs, such as the Radeon RX Vega 56
 # GPUType=GCNF      7 nm Vega GPUs, namely the Vega 20 series
 # GPUType=RDNA      devices using the RDNA microarchitecture, such as the
