Enable warnings and optimization for MacOS

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,10 +63,14 @@ jobs:
 
   MacOS:
     name: MacOS
-    runs-on: macos-13
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-13, macos-14]
+      fail-fast: false
     env:
-      CC: gcc
-      CPP: g++
+      CC: clang
+      CPP: clang++
     steps:
     - uses: actions/checkout@v4
     - name: Setup
@@ -74,7 +78,7 @@ jobs:
         brew install pocl
     - name: Build
       run: |
-        make -C src -f Makefile.macOS -j "$(sysctl -n hw.ncpu)" CC=${CC} CPP=${CPP} CFLAGS="$(pkg-config --cflags pocl)" LDFLAGS="$(pkg-config --libs pocl)"
+        make -C src -f Makefile.macOS -j "$(sysctl -n hw.ncpu)" CC=${CC} CPP=${CPP} CFLAGS="-O3 -Wall $(pkg-config --cflags pocl)" LDFLAGS="$(pkg-config --libs pocl)"
     - name: Test
       run: |
         ./mfakto -d 11
